# sefira

./: .gitignore  INSTALL  Makefile.am  README  configure.ac
lib/: Makefile.am  answer.cc  answer.hh  app.hh  bytemap.hh  byteset.hh  compare.cc  compare.hh  envelope.hh  forrest.cc  forrest.hh  nodeindex.hh  program.cc  program.hh  relapp.hh  relresult.cc  relresult.hh  shortmap.hh  treetable.cc  treetable.hh  twiddle.cc  twiddle.hh  xbuffer.cc  xdoc.cc  xutil.cc  xutil.hh
lib/optimistic/: Makefile.am  builder.cc  builder.hh  bytemap.hh  byteset.hh  directory.cc  directory.hh  doubleidx.cc  doubleidx.hh  graphedge.cc  graphedge.hh  scoreboard.cc  scoreboard.hh  shortmap.hh  srcgraph.cc  srcgraph.hh  twiddle.cc  twiddle.hh  weightmemo.cc  weightmemo.hh
lib/plastic/: Makefile.am  builder.cc  builder.hh  decomposition.cc  decomposition.hh  doubleseq.cc  doubleseq.hh  forrest.cc  forrest.hh  forrestenum.cc  forrestenum.hh  forrestscore.cc  forrestscore.hh  graph.cc  graph.hh  graphedge.cc  graphedge.hh  graphpoint.cc  graphpoint.hh  hand.cc  hand.hh  matchmap.cc  matchmap.hh  nodeanno.hh  pathset.cc  pathset.hh  postorder.cc  postorder.hh  postorderletter.cc  postorderletter.hh  succarray.cc  succarray.hh  treeanno.cc  treeanno.hh  treescore.cc  treescore.hh
lib/straight/: Makefile.am  builder.cc  builder.hh  forrest.cc  forrest.hh  itreeanno.cc  itreeanno.hh  lcsmemo.cc  lcsmemo.hh  nodeanno.hh  treeanno.cc  treeanno.hh  treeiter.cc  treeiter.hh  treeiterletter.cc  treeiterletter.hh
lib/systematic/: Makefile.am  annode.cc  annode.hh  bigenum.cc  bigenum.hh  bigenumbase.cc  bigenumbase.hh  bigleftenum.cc  bigleftenum.hh  bigrightenum.cc  bigrightenum.hh  builder.cc  builder.hh  dynapad.cc  dynapad.hh  fanpad.cc  fanpad.hh  forrest.cc  forrest.hh  forrestletter.cc  forrestletter.hh  ghostnode.cc  ghostnode.hh  inode.cc  inode.hh  inodefactory.cc  inodefactory.hh  nodefactory.cc  nodefactory.hh  realnode.cc  realnode.hh  rootnode.cc  rootnode.hh  smallenum.cc  smallenum.hh  smallenumbase.cc  smallenumbase.hh  smallenumcache.cc  smallenumcache.hh  smallleftenum.cc  (+6 more)
scripts/: gentree.py  move_tests.py
sefira.test/: 00optimistic.exp  01plastic.exp  01straight.exp  02straight.exp  02systematic.exp  03systematic.exp  Makefile.am
testdata/: 02b.xml  04a.xml  04b.xml  06a.xml  07a.xml  08b.xml  09a.xml  11a.xml  12a.xml  12b.xml  16a.xml  18b.xml  20a.xml  20b.xml  21a.xml  22a.xml  22b.xml  23a.xml  23b.xml  24b.xml  25a.xml  25b.xml  26a.xml  27a.xml  27b.xml  28a.xml  28b.xml  29b.xml  30a.xml  31b.xml  33a.xml  34b.xml  35a.xml  35b.xml  36a.xml  36b.xml  37b.xml  38a.xml  38b.xml  39a.xml  (+9 more)
testdata/optimistic/: 04d.xml  05d.xml  15d.xml  16d.xml  19d.xml  23d.xml  34d.xml  35d.xml  36d.xml  Makefile.am
testdata/plastic/: 01d.xml  03d.xml  12d.xml  14d.xml  19d.xml  20d.xml  25d.xml  26d.xml  31d.xml  36d.xml  39d.xml  41d.xml  50d.xml  Makefile.am
testdata/straight/: 00d.xml  25d.xml  26d.xml  32d.xml  35d.xml  37d.xml  40d.xml  41d.xml  42d.xml  Makefile.am
testdata/systematic/: 04d.xml  08d.xml  21d.xml  29d.xml  33d.xml  36d.xml  37d.xml  40d.xml  44d.xml  46d.xml  Makefile.am
