##process this file with automake to produce Makefile.in

EXTRA_DIST = 00a.xml 00b.xml 01a.xml 01b.xml 02a.xml 02b.xml 03a.xml 03b.xml 04a.xml 04b.xml 05a.xml 05b.xml 06a.xml 06b.xml 07a.xml 07b.xml 08a.xml 08b.xml 09a.xml 09b.xml 10a.xml 10b.xml 11a.xml 11b.xml 12a.xml 12b.xml 13a.xml 13b.xml 14a.xml 14b.xml 15a.xml 15b.xml 16a.xml 16b.xml 17a.xml 17b.xml 18a.xml 18b.xml 19a.xml 19b.xml 20a.xml 20b.xml 21a.xml 21b.xml 22a.xml 22b.xml 23a.xml 23b.xml 24a.xml 24b.xml 25a.xml 25b.xml 26a.xml 26b.xml 27a.xml 27b.xml 28a.xml 28b.xml 29a.xml 29b.xml 30a.xml 30b.xml 31a.xml 31b.xml 32a.xml 32b.xml 33a.xml 33b.xml 34a.xml 34b.xml 35a.xml 35b.xml 36a.xml 36b.xml 37a.xml 37b.xml 38a.xml 38b.xml 39a.xml 39b.xml 40a.xml 40b.xml 41a.xml 41b.xml

SUBDIRS = optimistic straight systematic

