## Process this file with automake to produce Makefile.in

INCLUDES=-I@LIBXML2_INCL_DIR@ -I. -I..

noinst_LTLIBRARIES = libplastic.la

libplastic_la_SOURCES = builder.cc decomposition.cc doubleseq.cc forrestenum.cc forrestscore.cc graph.cc graphpoint.cc graphedge.cc hand.cc matchmap.cc pathset.cc postorder.cc postorderletter.cc succarray.cc treeanno.cc treescore.cc

plasticincdir = $(pkgincludedir)/plastic
plasticinc_HEADERS = builder.hh decomposition.hh doubleseq.hh forrestenum.hh forrestscore.hh graph.hh graphpoint.hh graphedge.hh hand.hh matchmap.hh nodeanno.hh pathset.hh postorder.hh postorderletter.hh succarray.hh treeanno.hh treescore.hh
