## Process this file with automake to produce Makefile.in

INCLUDES=-I@LIBXML2_INCL_DIR@ -I. -I..

noinst_LTLIBRARIES = libstraight.la

libstraight_la_SOURCES = builder.cc itreeanno.cc lcsmemo.cc treeanno.cc treeiter.cc treeiterletter.cc

straightincdir = $(pkgincludedir)/straight
straightinc_HEADERS = builder.hh itreeanno.hh lcsmemo.hh nodeanno.hh treeanno.hh treeiter.hh treeiterletter.hh
