## Process this file with automake to produce Makefile.in

INCLUDES=-I@LIBXML2_INCL_DIR@ -I. -I..

noinst_LTLIBRARIES = libsystematic.la

libsystematic_la_SOURCES = annode.cc bigenum.cc bigenumbase.cc bigleftenum.cc bigrightenum.cc builder.cc dynapad.cc fanpad.cc forrest.cc forrestletter.cc ghostnode.cc inode.cc inodefactory.cc nodefactory.cc realnode.cc rootnode.cc smallenum.cc smallenumbase.cc smallleftenum.cc smallrightenum.cc stemtable.cc

systematicincdir = $(pkgincludedir)/systematic
systematicinc_HEADERS = annode.hh bigenum.hh bigenumbase.hh bigleftenum.hh bigrightenum.hh builder.hh dynapad.hh fanpad.hh forrest.hh forrestletter.hh ghostnode.hh inode.hh inodefactory.hh nodefactory.hh realnode.hh rootnode.hh smallenum.hh smallenumbase.hh smallleftenum.hh smallrightenum.hh stemtable.hh
